# land-activity-tracking

./: .env.development  .gitignore  README.md  docker-compose.yml  land-activity-tracking.code-workspace
.github/workflows/: django.yml  nextjs.yml
backend/: .prospector.yml  pyproject.toml
backend/activities/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/activities/migrations/: 0001_initial.py  0002_fixture_activity_types.py  0003_remove_activity_location_soilsample_location.py  0004_activity_name.py  0005_alter_fertilizationarea_activity_and_more.py  0006_alter_soilsample_location.py
backend/conf/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  authentication.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: .env.development  .eslintrc.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/activities/: page.module.css  page.tsx
frontend/assets/icons/: EyeFilledIcon.jsx  EyeSlashFilledIcon.jsx  index.ts
frontend/components/activity/: ActivityDetailCard.tsx  ActivityMeasurementsCard.tsx  CreateMeasurementModal.tsx  index.ts
frontend/components/common/: AppLayout.tsx  NavBar.tsx  RequireAuth.tsx  index.ts
frontend/components/map/: CreateActivityModal.tsx  HeaderOptions.tsx  draw-controls.ts  index.ts
frontend/hooks/: index.ts  use-login.ts  use-verify.ts
frontend/interfaces/: activity.ts  feature.ts
frontend/redux/: provider.ts  provider.tsx  store.ts
frontend/redux/features/: activitiesApiSlice.ts  (+2 more)
(+4 files in other folders)
